--- a/MahjongTournamentManager.Server/appsettings.json
+++ b/MahjongTournamentManager.Server/appsettings.json
@@ -16,6 +16,6 @@
         "ExpireDays": 7
     },
     "Cors": {
-        "AllowedOrigins": "http://localhost,https://localhost"
+        "AllowedOrigins": "https://ycb.onrender.com"
     }
 }
