--- a/mahjongtournamentmanager.client/angular.json
+++ b/mahjongtournamentmanager.client/angular.json
@@ -39,6 +39,7 @@
               "src/web.config"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -108,6 +109,7 @@
               "src/web.config"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": [],
