--- a/mahjongtournamentmanager.client/package.json
+++ b/mahjongtournamentmanager.client/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^19.1.0",
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
+    "bootstrap": "^5.3.7",
     "jest-editor-support": "*",
     "run-script-os": "*",
     "rxjs": "~7.8.0",
